src/assets/css/tailwind.pcss
@layer base {
  :root {
    --color-bg: #fef7f4;
    --color-text-main: #000000;
    --color-primary: #afece0;
    --wrapper-height: 85vh;
    --image-max-width: 320px;
    --font-family: "HK Grotesk";
    --font-family-header: "HK Grotesk";
    --color-highlight: #6effd4;
  }

  /* Basic page style resets */
  * {
    box-sizing: border-box;
  }
  [hidden] {
    display: none !important;
  }

  /* Import fonts */
  @font-face {
    font-family: HK Grotesk;
    src: url("https://cdn.glitch.me/605e2a51-d45f-4d87-a285-9410ad350515%2FHKGrotesk-Regular.otf?v=1603136326027")
      format("opentype");
  }
  @font-face {
    font-family: HK Grotesk;
    font-weight: bold;
    src: url("https://cdn.glitch.me/605e2a51-d45f-4d87-a285-9410ad350515%2FHKGrotesk-Bold.otf?v=1603136323437")
      format("opentype");
  }

  /* Our remix on glitch button */
  .btn--remix {
    font-family: HK Grotesk;
    padding: 0.75rem 1rem;
    font-size: 1.1rem;
    line-height: 1rem;
    font-weight: 500;
    height: 2.75rem;
    align-items: center;
    cursor: pointer;
    background: #ffffff;
    border: 1px solid #000000;
    box-sizing: border-box;
    border-radius: 4px;
    text-decoration: none;
    color: #000;
    white-space: nowrap;
    margin-left: auto;
  }
  .btn--remix img {
    margin-right: 0.5rem;
  }
  .btn--remix:hover {
    background-color: var(--color-highlight);
  }

  /* Navigation grid */
  .footer {
    display: flex;
    justify-content: space-between;
    margin: 0.2rem auto 0;
    padding: 0.75rem 0 0.5rem 0;
    width: 100%;
    flex-wrap: wrap;
    border-bottom: 4px solid #afece0;
  }

  .footer a:not(.btn--remix):link,
  a:not(.btn--remix):visited {
    font-family: HK Grotesk;
    font-style: normal;
    font-weight: normal;
    font-size: 1.1rem;
    color: #000;
    text-decoration: none;
    border-style: none;
  }
  .footer a:hover {
    background: var(--color-primary);
  }

  .footer .links {
    padding: 0.5rem 1rem 1.5rem;
    white-space: nowrap;
  }

  .divider {
    padding: 0 1rem;
  }
  /******************************************************************************
    END Glitch hello-app default styles
    ******************************************************************************/

  /* Page structure */
  body {
    font-family: var(--font-family);
    background-color: var(--color-bg);
  }
  .wrapper {
    min-height: var(--wrapper-height);
    place-items: center;
    margin: 3rem 2rem 0;
  }
  .content {
    display: flex;
    flex-direction: column;
    max-width: 900px;
    margin: 0 auto;
  }

  /* Typography */
  p {
    margin: 0 0 1rem 0;
    line-height: 1.5 !important;
    font-size: 1rem;
  }
  h1,
  h2,
  h3,
  h4,
  h5 {
    margin: 2rem 0 0.8rem;
    font-family: var(--font-family-header);
    font-weight: 600;
    line-height: 1.1;
    color: var(--color-text-main);
  }
  h1 {
    margin-top: 1rem;
    margin-bottom: 1.75rem;
    font-size: 5rem;
    display: inline-flex;
    background: rgb(93, 38, 193);
    background: -moz-linear-gradient(
      to right,
      rgba(93, 38, 193, 1) 0%,
      rgba(161, 127, 224, 1) 40%,
      rgba(89, 193, 115, 1) 100%
    );
    background: -webkit-linear-gradient(
      to right,
      rgba(93, 38, 193, 1) 0%,
      rgba(161, 127, 224, 1) 40%,
      rgba(89, 193, 115, 1) 100%
    );
    background: linear-gradient(
      to right,
      rgba(93, 38, 193, 1) 0%,
      rgba(161, 127, 224, 1) 40%,
      rgba(89, 193, 115, 1) 100%
    );
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5d26c1",endColorstr="#59c173",GradientType=1);
    -webkit-background-clip: text;
    -webkit-text-fill-color: transparent;
  }
  h2 {
    font-size: 4rem;
  }
  h3 {
    font-size: 2rem;
  }
  h4 {
    font-size: 1.5rem;
  }
  h5 {
    font-size: 1.25rem;
  }
  small,
  .text_small {
    font-size: 0.8rem;
  }
  ul > li,
  ol > li {
    margin-bottom: 0.75rem;
    line-height: 1.5;
    font-size: 1rem;
  }
  ul {
    padding: 0 0 0 18px;
    margin: 0;
  }
  ul.no-bullet {
    list-style-type: none;
  }

  /* Link styles */
  a:not(.btn--remix):link,
  a:not(.btn--remix):visited {
    text-decoration: none;
    border-bottom: 6px solid var(--color-primary);
    color: var(--foreground);
    transition: background 0.2s linear;
  }
  a:hover {
    background: var(--color-primary);
  }

  /* Title style adjustments */
  .title-lg {
    color: var(--color-text-main);
    font-family: HK Grotesk;
    font-style: normal;
    font-weight: bold;
    line-height: 1.5;
  }
  .title-md {
    font-size: 56px;
  }

  /* Layout: Home */
  .home {
    justify-content: left;
  }
  .illo-container {
    display: flex;
    justify-content: flex-end;
  }
  .illustration {
    max-width: 180px;
    max-height: var(--image-max-width);
    margin-top: 1rem;
    margin-right: 2rem;
    transform: rotate(16deg);
  }

  /* Post */
  .post {
    place-items: normal;
  }
  .postTitle {
    font-size: 4rem;
    color: #000;
    line-height: 1.1;
    margin-bottom: 2rem;
  }
  .controls {
    margin: 3rem 0 2rem;
  }
}

@tailwind base;

@tailwind components;

@tailwind utilities;

